--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Main page</title>
+    <title>Main page | Dashboard</title>
   </head>
   <body>
     <div class="app">
