--- a/index.html
+++ b/index.html
@@ -64,14 +64,16 @@
         <div class="content-body">
           <div class="section news-section">
             <div class="news-element">
-              <img src="#" class="news-element__image" />
-              <span class="news-element-title">Lorem ipsum</span>
-              <p class="news-element__description">
-                Lorem ipsum dolor sit amet consectetur.
-              </p>
-              <div class="author">
-                <img src="#" class="author__avatar" />
-                <div class="author__info">
+              <img
+                src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
+                class="news-element__image"
+              />
+              <div class="content-wrapper">
+                <span class="news-element-title">Lorem ipsum</span>
+                <p class="news-element__description">
+                  Lorem ipsum dolor sit amet consectetur.
+                </p>
+                <div class="author">
                   <span class="name">
                     Lorem, ipsum.
                   </span>
@@ -81,16 +83,37 @@
                 </div>
               </div>
             </div>
-
             <div class="news-element">
-              <img src="#" class="news-element__image" />
-              <span class="news-element-title">Lorem ipsum</span>
-              <p class="news-element__description">
-                Lorem ipsum dolor sit amet consectetur.
-              </p>
-              <div class="author">
-                <img src="#" class="author__avatar" />
-                <div class="author__info">
+              <img
+                src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
+                class="news-element__image"
+              />
+              <div class="content-wrapper">
+                <span class="news-element-title">Lorem ipsum</span>
+                <p class="news-element__description">
+                  Lorem ipsum dolor sit amet consectetur.
+                </p>
+                <div class="author">
+                  <span class="name">
+                    Lorem, ipsum.
+                  </span>
+                  <span class="date">
+                    10.07.2019 14:51
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="news-element">
+              <img
+                src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
+                class="news-element__image"
+              />
+              <div class="content-wrapper">
+                <span class="news-element-title">Lorem ipsum</span>
+                <p class="news-element__description">
+                  Lorem ipsum dolor sit amet consectetur.
+                </p>
+                <div class="author">
                   <span class="name">
                     Lorem, ipsum.
                   </span>
