--- a/index.html
+++ b/index.html
@@ -125,7 +125,50 @@
             </div>
           </div>
           <div class="section right-section">
-            <div class="weather"></div>
+            <div class="weather-wrapper">
+              <div class="weather-tools">
+                <span class="header">
+                  <span class="header-title">Weather</span>
+                  <span class="header-date">12.08.2019</span>
+                </span>
+
+                <div class="weather-buttons">
+                  <div class="theme-changer">
+                    <button class="button theme-light">Light</button>
+                    <button class="button theme-dark">Dark</button>
+                  </div>
+                </div>
+              </div>
+              <div class="weather">
+                <div class="weather-day">
+                  <div class="day-name">Monday</div>
+                  <span class="weather-description">Sunny weather</span>
+                  <div class="temperature">27 C</div>
+                  <img
+                    src="https://image.flaticon.com/icons/svg/56/56131.svg"
+                  />
+                </div>
+
+                <div class="weather-day">
+                  <div class="day-name">Monday</div>
+                  <span class="weather-description">Sunny weather</span>
+                  <div class="temperature">27 C</div>
+                  <img
+                    src="https://image.flaticon.com/icons/svg/56/56131.svg"
+                  />
+                </div>
+
+                <div class="weather-day">
+                  <div class="day-name">Monday</div>
+                  <span class="weather-description">Sunny weather</span>
+                  <div class="temperature">27 C</div>
+                  <img
+                    src="https://image.flaticon.com/icons/svg/56/56131.svg"
+                  />
+                </div>
+              </div>
+            </div>
+
             <div class="tools">
               <div class="time"></div>
               <div class="air"></div>
