--- a/index.html
+++ b/index.html
@@ -1,181 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
-      integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI="
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Main page | Dashboard</title>
-  </head>
-  <body>
-    <div class="app">
-      <div class="sidebar">
-        <a href="#" class="logo">
-          <img
-            src="https://www.munters.com/globalassets/images/logotypes/2018/2a-munterslogo-blue-rgb.png"
-          />
-        </a>
-        <ul class="menu">
-          <li class="active">
-            <a href="#">Dashboard</a>
-          </li>
-          <li>
-            <a href="#">Calendar</a>
-          </li>
-          <li>
-            <a href="#">Ticket</a>
-          </li>
-          <li>
-            <a href="#">Contacts</a>
-          </li>
-          <li>
-            <a href="#">Book</a>
-          </li>
-          <li>
-            <a href="#">Settings</a>
-          </li>
-        </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+    integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <title>Main page | Dashboard</title>
+</head>
+
+<body>
+  <div class="app">
+    <div class="sidebar">
+      <a href="#" class="logo">
+        <img src="https://www.munters.com/globalassets/images/logotypes/2018/2a-munterslogo-blue-rgb.png" />
+      </a>
+      <ul class="menu">
+        <li class="active">
+          <a href="#">Dashboard</a>
+        </li>
+        <li>
+          <a href="#">Calendar</a>
+        </li>
+        <li>
+          <a href="#">Ticket</a>
+        </li>
+        <li>
+          <a href="#">Contacts</a>
+        </li>
+        <li>
+          <a href="#">Book</a>
+        </li>
+        <li>
+          <a href="#">Settings</a>
+        </li>
+      </ul>
+    </div>
+    <div class="content">
+      <div class="header">
+        <h1>Dashboard</h1>
+
+        <div class="header__tools">
+          <button class="search-btn">
+            <i class="fas fa-search"></i>
+          </button>
+
+          <button class="settings-btn">
+            <i class="fas fa-cog"></i>
+          </button>
+        </div>
       </div>
-      <div class="content">
-        <div class="header">
-          <h1>Dashboard</h1>
 
-          <div class="header__tools">
-            <button class="search-btn">
-              <i class="fas fa-search"></i>
-            </button>
-
-            <button class="settings-btn">
-              <i class="fas fa-cog"></i>
-            </button>
+      <div class="content-body">
+        <div class="section news-section">
+          <div class="news-element">
+            <img src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
+              class="news-element__image" />
+            <div class="content-wrapper">
+              <span class="news-element-title">Lorem ipsum</span>
+              <p class="news-element__description">
+                Lorem ipsum dolor sit amet consectetur.
+              </p>
+              <div class="author">
+                <span class="name">
+                  Lorem, ipsum.
+                </span>
+                <span class="date">
+                  10.07.2019 14:51
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="news-element">
+            <img src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
+              class="news-element__image" />
+            <div class="content-wrapper">
+              <span class="news-element-title">Lorem ipsum</span>
+              <p class="news-element__description">
+                Lorem ipsum dolor sit amet consectetur.
+              </p>
+              <div class="author">
+                <span class="name">
+                  Lorem, ipsum.
+                </span>
+                <span class="date">
+                  10.07.2019 14:51
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="news-element">
+            <img src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
+              class="news-element__image" />
+            <div class="content-wrapper">
+              <span class="news-element-title">Lorem ipsum</span>
+              <p class="news-element__description">
+                Lorem ipsum dolor sit amet consectetur.
+              </p>
+              <div class="author">
+                <span class="name">
+                  Lorem, ipsum.
+                </span>
+                <span class="date">
+                  10.07.2019 14:51
+                </span>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="section right-section">
+          <div class="weather-wrapper">
+            <div class="weather-tools">
+              <span class="header">
+                <span class="header-title">Weather</span>
+                <span class="header-date">12.08.2019</span>
+              </span>
 
-        <div class="content-body">
-          <div class="section news-section">
-            <div class="news-element">
-              <img
-                src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
-                class="news-element__image"
-              />
-              <div class="content-wrapper">
-                <span class="news-element-title">Lorem ipsum</span>
-                <p class="news-element__description">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <div class="author">
-                  <span class="name">
-                    Lorem, ipsum.
-                  </span>
-                  <span class="date">
-                    10.07.2019 14:51
-                  </span>
+              <div class="weather-buttons">
+                <div class="theme-changer">
+                  <button class="button theme-light">Light</button>
+                  <button class="button theme-dark">Dark</button>
                 </div>
               </div>
             </div>
-            <div class="news-element">
-              <img
-                src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
-                class="news-element__image"
-              />
-              <div class="content-wrapper">
-                <span class="news-element-title">Lorem ipsum</span>
-                <p class="news-element__description">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <div class="author">
-                  <span class="name">
-                    Lorem, ipsum.
-                  </span>
-                  <span class="date">
-                    10.07.2019 14:51
-                  </span>
-                </div>
+            <div class="weather">
+              <div class="weather-day rain">
+                <div class="day-name">Monday</div>
+                <span class="weather-description">Rain</span>
+                <div class="temperature">27 C</div>
+                <img src="./images/weather-icons/0.png" />
               </div>
-            </div>
-            <div class="news-element">
-              <img
-                src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
-                class="news-element__image"
-              />
-              <div class="content-wrapper">
-                <span class="news-element-title">Lorem ipsum</span>
-                <p class="news-element__description">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <div class="author">
-                  <span class="name">
-                    Lorem, ipsum.
-                  </span>
-                  <span class="date">
-                    10.07.2019 14:51
-                  </span>
-                </div>
+
+              <div class="weather-day sun">
+                <div class="day-name">Tuesday</div>
+                <span class="weather-description">Sun</span>
+                <div class="temperature">27 C</div>
+                <img src="./images/weather-icons/30.png" />
+              </div>
+
+              <div class="weather-day wind">
+                <div class="day-name">Wednesday</div>
+                <span class="weather-description">Wind</span>
+                <div class="temperature">27 C</div>
+                <img src="./images/weather-icons/23.png" />
+              </div>
+
+              <div class="weather-day rain">
+                <div class="day-name">Thursday</div>
+                <span class="weather-description">Rain</span>
+                <div class="temperature">27 C</div>
+                <img src="./images/weather-icons/12.png" />
+              </div>
+
+              <div class="weather-day sun">
+                <div class="day-name">Friday</div>
+                <span class="weather-description">Sun</span>
+                <div class="temperature">27 C</div>
+                <img src="./images/weather-icons/30.png" />
               </div>
             </div>
           </div>
-          <div class="section right-section">
-            <div class="weather-wrapper">
-              <div class="weather-tools">
-                <span class="header">
-                  <span class="header-title">Weather</span>
-                  <span class="header-date">12.08.2019</span>
-                </span>
 
-                <div class="weather-buttons">
-                  <div class="theme-changer">
-                    <button class="button theme-light">Light</button>
-                    <button class="button theme-dark">Dark</button>
-                  </div>
-                </div>
-              </div>
-              <div class="weather">
-                <div class="weather-day">
-                  <div class="day-name">Monday</div>
-                  <span class="weather-description">Sunny weather</span>
-                  <div class="temperature">27 C</div>
-                  <img
-                    src="https://image.flaticon.com/icons/svg/56/56131.svg"
-                  />
-                </div>
-
-                <div class="weather-day">
-                  <div class="day-name">Monday</div>
-                  <span class="weather-description">Sunny weather</span>
-                  <div class="temperature">27 C</div>
-                  <img
-                    src="https://image.flaticon.com/icons/svg/56/56131.svg"
-                  />
-                </div>
-
-                <div class="weather-day">
-                  <div class="day-name">Monday</div>
-                  <span class="weather-description">Sunny weather</span>
-                  <div class="temperature">27 C</div>
-                  <img
-                    src="https://image.flaticon.com/icons/svg/56/56131.svg"
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div class="tools">
-              <div class="time"></div>
-              <div class="air"></div>
-            </div>
+          <div class="tools">
+            <div class="time"></div>
+            <div class="air"></div>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
