--- a/index.html
+++ b/index.html
@@ -165,8 +165,28 @@
           </div>
 
           <div class="tools">
-            <div class="time"></div>
-            <div class="air"></div>
+            <div class="time">
+              <div class="switches time__switches">
+                <button>Cracow</button>
+                <button>London</button>
+                <button>New York</button>
+              </div>
+              <div class="card time__display">
+                <span class="time-title">Current time</span>
+                <div class="current-time">08:54</div>
+                <div class="city">Cracow</div>
+                <div class="bg"></div>
+              </div>
+            </div>
+            <div class="live">
+              <div class="switches live__switches">
+                <button>CNN</button>
+                <button>BBC</button>
+              </div>
+              <iframe class="card live__video" src="https://www.youtube.com/embed/ri6NE6BulDY" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
           </div>
         </div>
       </div>
