--- a/index.html
+++ b/index.html
@@ -56,60 +56,7 @@
 
       <div class="content-body">
         <div class="section news-section">
-          <div class="news-element">
-            <img src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
-              class="news-element__image" />
-            <div class="content-wrapper">
-              <span class="news-element-title">Lorem ipsum</span>
-              <p class="news-element__description">
-                Lorem ipsum dolor sit amet consectetur.
-              </p>
-              <div class="author">
-                <span class="name">
-                  Lorem, ipsum.
-                </span>
-                <span class="date">
-                  10.07.2019 14:51
-                </span>
-              </div>
-            </div>
-          </div>
-          <div class="news-element">
-            <img src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
-              class="news-element__image" />
-            <div class="content-wrapper">
-              <span class="news-element-title">Lorem ipsum</span>
-              <p class="news-element__description">
-                Lorem ipsum dolor sit amet consectetur.
-              </p>
-              <div class="author">
-                <span class="name">
-                  Lorem, ipsum.
-                </span>
-                <span class="date">
-                  10.07.2019 14:51
-                </span>
-              </div>
-            </div>
-          </div>
-          <div class="news-element">
-            <img src="https://shawglobalnews.files.wordpress.com/2019/08/21541456.jpg?quality=70&strip=all&w=256"
-              class="news-element__image" />
-            <div class="content-wrapper">
-              <span class="news-element-title">Lorem ipsum</span>
-              <p class="news-element__description">
-                Lorem ipsum dolor sit amet consectetur.
-              </p>
-              <div class="author">
-                <span class="name">
-                  Lorem, ipsum.
-                </span>
-                <span class="date">
-                  10.07.2019 14:51
-                </span>
-              </div>
-            </div>
-          </div>
+          <img src="https://i.pinimg.com/originals/76/77/ed/7677edd5a44b10130b8824ca020ba60b.gif" class="preloader" />
         </div>
         <div class="section right-section">
           <div class="weather-wrapper">
@@ -192,6 +139,7 @@
       </div>
     </div>
   </div>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
