--- a/index.html
+++ b/index.html
@@ -1,145 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+      integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI="
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Main page | Dashboard</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
-    integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/styles.css" />
-  <title>Main page | Dashboard</title>
-</head>
-
-<body>
-  <div class="app">
-    <div class="sidebar">
-      <a href="#" class="logo">
-        <img src="https://www.munters.com/globalassets/images/logotypes/2018/2a-munterslogo-blue-rgb.png" />
-      </a>
-      <ul class="menu">
-        <li class="active">
-          <a href="#">Dashboard</a>
-        </li>
-        <li>
-          <a href="#">Calendar</a>
-        </li>
-        <li>
-          <a href="#">Ticket</a>
-        </li>
-        <li>
-          <a href="#">Contacts</a>
-        </li>
-        <li>
-          <a href="#">Book</a>
-        </li>
-        <li>
-          <a href="#">Settings</a>
-        </li>
-      </ul>
-    </div>
-    <div class="content">
-      <div class="header">
-        <h1>Dashboard</h1>
-
-        <div class="header__tools">
-          <button class="search-btn">
-            <i class="fas fa-search"></i>
-          </button>
-
-          <button class="settings-btn">
-            <i class="fas fa-cog"></i>
-          </button>
-        </div>
+  <body>
+    <div class="app">
+      <div class="sidebar">
+        <a href="#" class="logo">
+          <img
+            src="https://www.munters.com/globalassets/images/logotypes/2018/2a-munterslogo-blue-rgb.png"
+          />
+        </a>
+        <ul class="menu">
+          <li class="active">
+            <a href="#">Dashboard</a>
+          </li>
+          <li>
+            <a href="#">Calendar</a>
+          </li>
+          <li>
+            <a href="#">Ticket</a>
+          </li>
+          <li>
+            <a href="#">Contacts</a>
+          </li>
+          <li>
+            <a href="#">Book</a>
+          </li>
+          <li>
+            <a href="#">Settings</a>
+          </li>
+        </ul>
       </div>
+      <div class="content">
+        <div class="header">
+          <h1>Dashboard</h1>
 
-      <div class="content-body">
-        <div class="section news-section">
-          <img src="https://i.pinimg.com/originals/76/77/ed/7677edd5a44b10130b8824ca020ba60b.gif" class="preloader" />
+          <div class="header__tools">
+            <button class="search-btn">
+              <i class="fas fa-search"></i>
+            </button>
+
+            <button class="settings-btn">
+              <i class="fas fa-cog"></i>
+            </button>
+          </div>
         </div>
-        <div class="section right-section">
-          <div class="weather-wrapper">
-            <div class="weather-tools">
-              <span class="header">
-                <span class="header-title">Weather</span>
-                <span class="header-date">12.08.2019</span>
-              </span>
 
-              <div class="weather-buttons">
-                <div class="theme-changer">
-                  <button class="button theme-light">Light</button>
-                  <button class="button theme-dark">Dark</button>
+        <div class="content-body">
+          <div class="section news-section">
+            <img
+              src="https://i.pinimg.com/originals/76/77/ed/7677edd5a44b10130b8824ca020ba60b.gif"
+              class="preloader"
+            />
+          </div>
+          <div class="section right-section">
+            <div class="weather-wrapper">
+              <div class="weather-tools">
+                <span class="weather-tools__header">
+                  <span class="header-title">Weather</span>
+                  <span class="header-date">12.08.2019</span>
+                </span>
+
+                <div class="weather-buttons">
+                  <div class="theme-changer">
+                    <button class="button theme-light">Light</button>
+                    <button class="button theme-dark">Dark</button>
+                  </div>
+                </div>
+              </div>
+              <div class="weather">
+                <div class="weather-day rain">
+                  <div class="day-name">Monday</div>
+                  <span class="weather-description">Rain</span>
+                  <div class="temperature">27 C</div>
+                  <img src="./images/weather-icons/0.png" />
+                </div>
+
+                <div class="weather-day sun">
+                  <div class="day-name">Tuesday</div>
+                  <span class="weather-description">Sun</span>
+                  <div class="temperature">27 C</div>
+                  <img src="./images/weather-icons/30.png" />
+                </div>
+
+                <div class="weather-day wind">
+                  <div class="day-name">Wednesday</div>
+                  <span class="weather-description">Wind</span>
+                  <div class="temperature">27 C</div>
+                  <img src="./images/weather-icons/23.png" />
+                </div>
+
+                <div class="weather-day rain">
+                  <div class="day-name">Thursday</div>
+                  <span class="weather-description">Rain</span>
+                  <div class="temperature">27 C</div>
+                  <img src="./images/weather-icons/12.png" />
+                </div>
+
+                <div class="weather-day sun">
+                  <div class="day-name">Friday</div>
+                  <span class="weather-description">Sun</span>
+                  <div class="temperature">27 C</div>
+                  <img src="./images/weather-icons/30.png" />
                 </div>
               </div>
             </div>
-            <div class="weather">
-              <div class="weather-day rain">
-                <div class="day-name">Monday</div>
-                <span class="weather-description">Rain</span>
-                <div class="temperature">27 C</div>
-                <img src="./images/weather-icons/0.png" />
-              </div>
 
-              <div class="weather-day sun">
-                <div class="day-name">Tuesday</div>
-                <span class="weather-description">Sun</span>
-                <div class="temperature">27 C</div>
-                <img src="./images/weather-icons/30.png" />
+            <div class="tools">
+              <div class="time">
+                <div class="switches time__switches">
+                  <button>Cracow</button>
+                  <button>London</button>
+                  <button>New York</button>
+                </div>
+                <div class="card time__display">
+                  <span class="time-title">Current time</span>
+                  <div class="current-time">08:54</div>
+                  <div class="city">Cracow</div>
+                  <div class="bg"></div>
+                </div>
               </div>
-
-              <div class="weather-day wind">
-                <div class="day-name">Wednesday</div>
-                <span class="weather-description">Wind</span>
-                <div class="temperature">27 C</div>
-                <img src="./images/weather-icons/23.png" />
+              <div class="live">
+                <div class="switches live__switches">
+                  <button>CNN</button>
+                  <button>BBC</button>
+                </div>
+                <iframe
+                  class="card live__video"
+                  src="https://www.youtube.com/embed/ri6NE6BulDY"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
               </div>
-
-              <div class="weather-day rain">
-                <div class="day-name">Thursday</div>
-                <span class="weather-description">Rain</span>
-                <div class="temperature">27 C</div>
-                <img src="./images/weather-icons/12.png" />
-              </div>
-
-              <div class="weather-day sun">
-                <div class="day-name">Friday</div>
-                <span class="weather-description">Sun</span>
-                <div class="temperature">27 C</div>
-                <img src="./images/weather-icons/30.png" />
-              </div>
-            </div>
-          </div>
-
-          <div class="tools">
-            <div class="time">
-              <div class="switches time__switches">
-                <button>Cracow</button>
-                <button>London</button>
-                <button>New York</button>
-              </div>
-              <div class="card time__display">
-                <span class="time-title">Current time</span>
-                <div class="current-time">08:54</div>
-                <div class="city">Cracow</div>
-                <div class="bg"></div>
-              </div>
-            </div>
-            <div class="live">
-              <div class="switches live__switches">
-                <button>CNN</button>
-                <button>BBC</button>
-              </div>
-              <iframe class="card live__video" src="https://www.youtube.com/embed/ri6NE6BulDY" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="./js/app.js"></script>
-</body>
-
+    <script src="./js/app.js"></script>
+  </body>
 </html>
