--- a/index.html
+++ b/index.html
@@ -84,42 +84,7 @@
                   </div>
                 </div>
               </div>
-              <div class="weather">
-                <div class="weather-day rain">
-                  <div class="day-name">Monday</div>
-                  <span class="weather-description">Rain</span>
-                  <div class="temperature">27 C</div>
-                  <img src="./images/weather-icons/0.png" />
-                </div>
-
-                <div class="weather-day sun">
-                  <div class="day-name">Tuesday</div>
-                  <span class="weather-description">Sun</span>
-                  <div class="temperature">27 C</div>
-                  <img src="./images/weather-icons/30.png" />
-                </div>
-
-                <div class="weather-day wind">
-                  <div class="day-name">Wednesday</div>
-                  <span class="weather-description">Wind</span>
-                  <div class="temperature">27 C</div>
-                  <img src="./images/weather-icons/23.png" />
-                </div>
-
-                <div class="weather-day rain">
-                  <div class="day-name">Thursday</div>
-                  <span class="weather-description">Rain</span>
-                  <div class="temperature">27 C</div>
-                  <img src="./images/weather-icons/12.png" />
-                </div>
-
-                <div class="weather-day sun">
-                  <div class="day-name">Friday</div>
-                  <span class="weather-description">Sun</span>
-                  <div class="temperature">27 C</div>
-                  <img src="./images/weather-icons/30.png" />
-                </div>
-              </div>
+              <div class="weather"></div>
             </div>
 
             <div class="tools">
@@ -155,5 +120,6 @@
       </div>
     </div>
     <script src="./js/app.js"></script>
+    <script src="./js/weather.js"></script>
   </body>
 </html>
