--- a/index.html
+++ b/index.html
@@ -79,8 +79,18 @@
 
                 <div class="weather-buttons">
                   <div class="theme-changer">
-                    <button class="button theme-light">Light</button>
-                    <button class="button theme-dark">Dark</button>
+                    <button
+                      class="button theme-light"
+                      onclick="setTheme('light')"
+                    >
+                      Light
+                    </button>
+                    <button
+                      class="button theme-dark"
+                      onclick="setTheme('dark')"
+                    >
+                      Dark
+                    </button>
                   </div>
                 </div>
               </div>
